# celeris

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ZERO_TO_ARCHITECT.md  render.yaml
.github/workflows/: build.yml
include/core/: Event.hpp  Process.hpp  Region.hpp  Signal.hpp  SimContext.hpp
include/engine/: DeltaBarrier.hpp  Profiler.hpp  SimulationEngine.hpp  WorkerThread.hpp
include/legacy/: LegacyDeltaQueue.hpp  LegacyEvent.hpp  LegacySimEngine.hpp  LegacyTimeWheel.hpp
include/scheduler/: DeltaQueue.hpp  EventScheduler.hpp  TimeWheel.hpp
include/sync/: AtomicStrategy.hpp  CoarseGrainedStrategy.hpp  FineGrainedStrategy.hpp  ISyncStrategy.hpp  RWLock.hpp  SpinLock.hpp  SyncStrategyFactory.hpp
src/: main.cpp
tools/: analyzer.py  cli.py  rtl_parser.py  sample.v  simulator.py
web/: app.py
web/static/: index.html
